started in with the css. added style to the header, got the links where I want them. Fixed text size, colors. Moved my picture to the far left (placed it first in the html). Also got my work cards working sort of how I want. Added a border, box shadow, margin. Moved the images out of the links so I could bring the links all the way to the front of the z-index, over the h2. Added a background color of very dark grey so when .card:hover, opacity of the image drops, darkening it. Also made h3 (meant to say h3 earlier) opacity: 0 and on .card:hover opacity goes to 1. Put h3 in the middle of the card by making its position absolute (so it didn't take up space) and making .card display:flex and justify/align center.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,76 @@
-img {
+h1 {
+    color: gold;
+    font-size: 3em;
+}
+header img {
+    height: 7rem;
+    width: 7rem;
+    margin: 0 1em;
+}
+
+header {
+    display: flex;
+    background-color: rgb(0, 0, 53);
+    align-items: center;
+    width: 100%;
+}
+
+header a {
+    text-decoration: none;
+    color: gold;
+    font-size: 2em;
+    margin: .5em;
+}
+
+header div {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1rem;
+}
+
+.card img {
     width: 200px;
     height: 200px;
+    border-color: wheat;
+    border-width: .25em;
+    border-style: solid;
+    transition: opacity .5s;
+}
+
+.card:hover img {
+    opacity: .3;
+}
+
+.card {
+    background-color: #222222;
+    box-shadow: #aaaaaa .5rem .5rem .5rem;
+    width: 200px;
+    height: 197px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 2%;
+}
+
+.card h3 {
+    z-index: 1; 
+    opacity: 0;
+    transition: opacity .5s;
+    color: white;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    padding: 2em;
+}
+
+.card:hover h3{
+    opacity: 1;
+}
+
+.card a {
+    width: 200px;
+    height: 200px;
+    z-index: 2;
 }
